# SAE4.DEVCLOUD.01

./: .editorconfig  .env.example  .gitignore  README.md  compose.yml  docker-compose.yml  pyrightconfig.json
backend/: Dockerfile  pyproject.toml
backend/backend/: auth.py  main.py  models.py  settings.py
backend/backend-sae401/: main.py  models.py
backend/backend/routes/: __init__.py  account.py  transaction.py  user.py
backend/backend/routes/api/: __init__.py  account.py  transaction.py  user.py
frontend/: .env.example  Dockerfile  accounts.txt  start.sh
frontend/webclient/webclient/: asgi.py  settings.py  urls.py  wsgi.py
frontend/webclient/webinterface/: urls.py
frontend/webclient/webinterface/static/css/: auth.css  dashboard_cli.css  dashboard_manager.css  home.css
frontend/webclient/webinterface/templates/banquier/: auth.html  dashboard.html
frontend/webclient/webinterface/templates/clients/: auth.html  dashboard.html
frontend/webclient/webinterface/templates/home/: index.html
frontend/webclient/webinterface/test/: request.py
frontend/webclient/webinterface/views/: __init__.py  api.py  banquier.py  clients.py  home.py
