[project]
name = "backend-sae401"
version = "0.0.0"
description = "Default template for PDM package"
authors = [{ name = "Sutaai", email = "sutaai@proton.me" }]
dependencies = [
    "fastapi[standard]>=0.115.12",
    "tortoise-orm[accel,aiomysql]>=0.25.0",
    "pydantic-settings>=2.9.1",
    "cryptography>=45.0.3",
    "passlib>=1.7.4",
    "schwifty>=2025.1.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "None" }


[tool.pdm]
distribution = false

[dependency-groups]
dev = ["black>=25.1.0", "isort>=6.0.1", "ruff>=0.11.12"]
